Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
     <div class="container" role="main" id="main-content">
         <header>
             <h1 id="name">Carol - Grandmother with Macular Degeneration</h1>
+            <img src="carol-photo.png" alt="Carol, an elderly woman with a gentle smile, wearing glasses." width="300" height="auto">
             <p class="subtitle" id="subtitle">Older adult with low vision who loves reading and using the computer</p>
         </header>
 
