Enhance accessibility in Carol Persona Card by adding tabindex attributes to headings and paragraphs for improved keyboard navigation.

--- a/index.html
+++ b/index.html
@@ -182,18 +182,18 @@ Carol Persona Card
         </div>
 
         <header>
-            <h1 id="name">Carol</h1>
-            <p class="subtitle" id="subtitle" role="doc-subtitle">Grandmother with Macular Degeneration</p>
+            <h1 id="name" tabindex="0">Carol</h1>
+            <p class="subtitle" id="subtitle" role="doc-subtitle" tabindex="0">Grandmother with Macular Degeneration</p>
         </header>
 
         <section aria-labelledby="about-title">
-            <h2 id="about-title">About Carol</h2>
-            <p id="about-text">Carol has always loved reading, so her fading eyesight is a sorrow to her. She tried recorded books, but she didn't like them. She made the transition from ledgers to a software program, so she's happy to use the computer. She loves getting emails from her grandkids and friends. She likes reading magazine articles online, especially when they are free. Last year, she discovered that she could get her prescriptions more cheaply online, and now she buys some things from the web. Her biggest problem is that the text is so small. She's learned how to click on the symbol to make the text bigger, but is frustrated when it doesn't work the same way on every site. She also finds that her hands aren't as steady as they used to be, and she can't always click on things accurately. As her eyes get worse, she wonders how long she'll be able to keep using the computer. All that light gray text on a white screen is just too hard to see.</p>
+            <h2 id="about-title" tabindex="0">About Carol</h2>
+            <p id="about-text" tabindex="0">Carol has always loved reading, so her fading eyesight is a sorrow to her. She tried recorded books, but she didn't like them. She made the transition from ledgers to a software program, so she's happy to use the computer. She loves getting emails from her grandkids and friends. She likes reading magazine articles online, especially when they are free. Last year, she discovered that she could get her prescriptions more cheaply online, and now she buys some things from the web. Her biggest problem is that the text is so small. She's learned how to click on the symbol to make the text bigger, but is frustrated when it doesn't work the same way on every site. She also finds that her hands aren't as steady as they used to be, and she can't always click on things accurately. As her eyes get worse, she wonders how long she'll be able to keep using the computer. All that light gray text on a white screen is just too hard to see.</p>
         </section>
 
         <section aria-labelledby="tech-title">
-            <h2 id="tech-title">Technologies and Preferences</h2>
-            <ul id="tech-list">
+            <h2 id="tech-title" tabindex="0">Technologies and Preferences</h2>
+            <ul id="tech-list" tabindex="0">
                 <li>Computer for emails, shopping, and reading articles</li>
                 <li>Browser zoom feature to enlarge text</li>
                 <li>"Old fashioned" mobile phone with large buttons she can feel easily</li>
@@ -203,8 +203,8 @@ Carol Persona Card
         </section>
 
         <section aria-labelledby="barriers-title">
-            <h2 id="barriers-title">Main Barriers Encountered</h2>
-            <ul id="barriers-list">
+            <h2 id="barriers-title" tabindex="0">Main Barriers Encountered</h2>
+            <ul id="barriers-list" tabindex="0">
                 <li>Text that is too small and cannot be enlarged properly</li>
                 <li>Low contrast text (especially light gray on white backgrounds)</li>
                 <li>Text that doesn't reflow when enlarged, requiring horizontal scrolling</li>
