Add tabindex attribute to Carol's photo for improved keyboard accessibility

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Carol Persona Card
         </div>
 
         <div class="photo-container">
-            <img src="carol-photo.png" alt="Carol, elderly woman with glasses, smiling gently" id="photo-alt">
+            <img src="carol-photo.png" alt="Carol, elderly woman with glasses, smiling gently" id="photo-alt" tabindex="0">
         </div>
 
         <header>
