Refine accessibility features in Carol Persona Card by removing unnecessary tabindex from subtitle and enhancing photo alt text for better clarity and context.

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Carol Persona Card
 
         <header>
             <h1 id="name" tabindex="0">Carol</h1>
-            <p class="subtitle" id="subtitle" role="doc-subtitle" tabindex="0">Grandmother with Macular Degeneration</p>
+            <p class="subtitle" id="subtitle" tabindex="0">Grandmother with Macular Degeneration</p>
         </header>
 
         <section aria-labelledby="about-title">
@@ -221,7 +221,7 @@ Carol Persona Card
         const translations = {
             en: {
                 skipLink: 'Skip to main content',
-                photoAlt: 'Carol, elderly woman with glasses, smiling gently',
+                photoAlt: 'Portrait photo of Carol, a senior woman in her sixties wearing eyeglasses, with gray hair and a warm, gentle smile. She represents a persona with low vision due to macular degeneration.',
                 name: 'Carol',
                 subtitle: 'Grandmother with Macular Degeneration',
                 aboutTitle: 'About Carol',
@@ -247,7 +247,7 @@ Carol Persona Card
             },
             es: {
                 skipLink: 'Saltar al contenido principal',
-                photoAlt: 'Carol, mujer mayor con lentes, sonriendo suavemente',
+                photoAlt: 'Foto retrato de Carol, una mujer mayor de unos sesenta años con lentes, cabello gris y una sonrisa cálida y suave. Representa una persona con baja visión debido a degeneración macular.',
                 name: 'Carol',
                 subtitle: 'Abuela con Degeneración Macular',
                 aboutTitle: 'Sobre Carol',
