Refine photo alt text in Carol Persona Card for improved clarity and context

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Carol Persona Card
         const translations = {
             en: {
                 skipLink: 'Skip to main content',
-                photoAlt: 'Portrait photo of Carol, a senior woman in her sixties wearing eyeglasses, with gray hair and a warm, gentle smile. She represents a persona with low vision due to macular degeneration.',
+                photoAlt: 'Portrait photo of Carol, a senior woman about sixty years old wearing glasses, with gray hair and a warm, gentle smile. She represents a person with low vision due to macular degeneration.',
                 name: 'Carol',
                 subtitle: 'Grandmother with Macular Degeneration',
                 aboutTitle: 'About Carol',
