--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Carol Persona Card
         </div>
     </div>
 
-    <a href="#main-content" class="skip-link" id="skip-link">Skip to main content</a>
+    <a href="#main-content" class="skip-link" id="skip-link">Keyboard navigation available</a>
     
     <div class="container" role="main" id="main-content" tabindex="-1">
         <div class="language-selector">
@@ -299,8 +299,8 @@ Carol Persona Card
 
         const translations = {
             en: {
-                skipLink: 'Skip to main content',
-                photoAlt: 'Portrait photo of Carol, a senior woman in her sixties wearing eyeglasses, with gray hair and a warm, gentle smile. She represents a persona with low vision due to macular degeneration.',
+                skipLink: 'Keyboard navigation available',
+                photoAlt: 'Portrait photo of Carol, a senior woman about sixty years old wearing glasses, with gray hair and a warm, gentle smile. She represents a person with low vision due to macular degeneration.',
                 name: 'Carol',
                 subtitle: 'Grandmother with Macular Degeneration',
                 aboutTitle: 'About Carol',
@@ -325,7 +325,7 @@ Carol Persona Card
                 langChanged: 'Language changed to English'
             },
             es: {
-                skipLink: 'Saltar al contenido principal',
+                skipLink: 'Navegación por teclado disponible',
                 photoAlt: 'Foto retrato de Carol, una mujer mayor de unos sesenta años con lentes, cabello gris y una sonrisa cálida y suave. Representa una persona con baja visión debido a degeneración macular.',
                 name: 'Carol',
                 subtitle: 'Abuela con Degeneración Macular',
